# project_def_cai

./: .env.example  .env.serve  AGENTS.md  ASSETS.md  CLAUDE.md  Dockerfile.serve  MODULE_TODO.md  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
configs/: default.toml
configs/eval/: knowledge.toml  open_ctf_subset.toml  privacy.toml
configs/ros2/: default.toml
docker/: Dockerfile  Dockerfile.cuda  Dockerfile.mlx  docker-compose.yaml  docker-compose.yml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
scripts/: check_assets.py  run_benchmarks.py  run_demo.sh  run_eval_subset.sh  train.py
src/anima_daikokuten/: __init__.py
tasks/: PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0104.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0204.md  PRD-0205.md  PRD-0206.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0304.md  PRD-0305.md  PRD-0306.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0404.md  PRD-0405.md  PRD-0406.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0504.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0604.md  PRD-0701.md  PRD-0702.md  PRD-0703.md  PRD-0704.md
tests/: test_agent_registry.py  test_api.py  test_cli_runtime.py  test_eval_reports.py  test_eval_runner.py  test_findings.py  test_guardrails.py  test_handoffs.py  test_patterns.py  test_robot_findings.py  test_ros2_graph.py  test_schemas.py  test_settings.py  test_tools_linux.py  test_tracing.py
(+59 files in other folders)
