[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anima-def-cai"
version = "0.1.0"
description = "ANIMA DEF-CAI — CAI-aligned cybersecurity orchestration module"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "httpx>=0.27",
    "paramiko>=3.5",
    "typing-extensions>=4.12",
]

[project.optional-dependencies]
mac = [
    "mlx>=0.22; platform_system == 'Darwin' and platform_machine == 'arm64'",
]
cuda = [
    "torch>=2.2; platform_system != 'Darwin'",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anima_def_cai"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
